misc/cm-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: cm-pod
  name: cm-pod
spec:
  volumes:
  - name: app-config
    configMap:
      name: app-config

  containers:
  - image: busybox
    name: cm-pod
    command:
    - sh
    - -c
    - " echo hello; sleep 1d"
    volumeMounts:
    - name: app-config
      mountPath: /etc/config
