misc/env-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: env-pod
  name: env-pod
spec:
  containers:
  - image: nginx
    name: env-pod
