misc/web-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: web-dep
  name: web-dep
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-dep
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: web-dep
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
        resources: {}
status: {}
