misc/common-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: common-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: common-svc
            port:
              number: 80
        path: /
        pathType: Prefix
