misc/deny-all-in-secure-ns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-in-secure
  namespace: secure
spec:
  podSelector: {}
  policyTypes:
  - Ingress
